# intel-vest-advisor

./: .gitignore  README.md  pyproject.toml
agents/investor_profile/: agent.py
agents/model_management/: agent.py  utils.py
agents/model_management/sql/: create_dataset.sql  evaluate_model.sql
agents/orchestration/: agent.py
agents/prompts/: user_profile_prompt_with_questions.txt
agents/risk_assessment/: agent.py
agents/risk_assessment/sql/: predict_risk_profile.sql
agents/risk_model_selection/: agent.py  model_utils.py  utils.py
agents/risk_model_selection/sql/: evaluate_model.sql  train_model.sql  train_model_boosted.sql
agents/shared/: data_utils.py  model_utils.py
data/: finra_cleaned.parquet
database/: __init__.py  models.py  session_store.py
notebooks/: data_analysis.ipynb
scripts/: manual_run_risk_assessment.py
src/data/: finra_cleaned.csv
tests/: test_agents.py
tests/investor_profile/: test_agent.py
tests/risk_assessment/: test_agent.py  test_interactive_profile.py  test_profile_predictor.py
tests/risk_model_selection/: test_agent.py  test_model_trainer.py
ui/: __init__.py  client.py  investment_advisor_ui.py
utils/: __init__.py  env_manager.py  load_env.py  logging_config.py  monitoring.py  session_manager.py
