[project]
name = "intel-vest-advisor"
version = "0.1.0"
description = "A new agentic AI project with ADK for providing personalized advice on investment based on user profile"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.1.1",
    "google-cloud-bigquery>=3.34.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "python-dotenv>=1.1.0",
]


